fix(button-group): remove visual defects on iOS

--- a/src/components/button-group/button-group.scss
+++ b/src/components/button-group/button-group.scss
@@ -46,6 +46,7 @@
     input[type='radio'] {
         width: 0;
         position: absolute;
+        border: none; // This removes some visual defects on iOS, created by "user agent styles"
     }
 
     span[role='gridcell'] {
